--- a/gmltec.frontend/angular.json
+++ b/gmltec.frontend/angular.json
@@ -114,6 +114,9 @@
             "scripts": [],
             "karmaConfig": "karma.conf.js"
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
